# lieutenant_of_poker

./: .gitignore  4.txt  5.txt  6.txt  6_new.txt  7.txt  CLAUDE.md  README.md  debug_export.py  pyproject.toml  report.html
.beads/: issues.jsonl
lieutenant_of_poker/: __init__.py  _detection.py  _positions.py  action_detector.py  action_log_export.py  analysis.py  batch_export.py  calibrate.py  calibrate_hero.py  card_detector.py  card_matcher.py  chip_ocr.py  cli.py  dealer_detector.py  diagnostic.py  digit_filters.npy  digit_matcher.py  export.py  fast_ocr.py  first_frame.py  formatter.py  frame_extractor.py  game_simulator.py  game_state.py  hand_history.py  hotkeys.py  human_export.py  image_matcher.py  info.py  live_monitor.py  live_state_tracker.py  name_detector.py  notifications.py  pokerstars_export.py  preprocessing.py  progress.py  rules_engine.py  rules_validator.py  screen_capture.py  serialization.py  (+5 more)
lieutenant_of_poker/rules/: __init__.py  basic_rules.py
lieutenant_of_poker/templates/: diagnostic_report.html
scripts/: add_fixture.py  analyze_card_positions.py  clear_unmatched.py  extract_card_slots.py  list_windows.py  pylint_to_beads.py  split_card_regions.py
tests/: test_action_detector.py  test_analysis_regression.py  test_basic_rules.py  test_card_detector.py  test_card_matcher.py  test_chip_ocr.py  test_cli.py  test_export_regression.py  test_frame_extractor.py  test_game_state.py  test_hand_history.py  test_live_monitor.py  test_live_state_tracker.py  test_notifications.py  test_rules_engine.py  test_screen_capture.py  test_serialization.py  test_table_regions.py
tests/fixtures/: video10_config.json  video10_export_snowie.txt  video10_states.json  video1_config.json  video1_export_snowie.txt  video1_states.json  video2_config.json  video2_export_snowie.txt  video2_states.json  video3_config.json  video3_export_snowie.txt  video3_states.json  video4_export_snowie.txt  (+20 more)
