[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lieutenant_of_poker"
version = "0.1.0"
description = "Video analysis software for Governor of Poker screencaps"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kevin"}
]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pytesseract>=0.3.10",
    "tesserocr>=2.6.0",
    "Pillow>=10.0.0",
    "rich>=13.0",
    "pyobjc-framework-ScreenCaptureKit>=10.0;sys_platform=='darwin'",
    "pyobjc-framework-Quartz>=10.0;sys_platform=='darwin'",
    "pyobjc-framework-AVFoundation>=10.0;sys_platform=='darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
lieutenant = "lieutenant_of_poker.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
